fix user & admin pages on small screens

--- a/frontend/src/Pages/AdminPanel/Overview/overview.scss
+++ b/frontend/src/Pages/AdminPanel/Overview/overview.scss
@@ -28,3 +28,12 @@
     }
   }
 }
+
+@media(max-width: 600px) {
+  .overview {
+    padding: 0;
+  }
+  .overview .content-wrapper{
+    flex-direction: column;
+  }
+}
