--- a/frontend/src/Pages/UserDashboard/Overview/overview.scss
+++ b/frontend/src/Pages/UserDashboard/Overview/overview.scss
@@ -64,3 +64,12 @@
     }
   }
 }
+
+@media(max-width: 600px) {
+  .overview {
+    padding: 0;
+  }
+  .overview .content-wrapper{
+    flex-direction: column;
+  }
+}
