--- a/frontend/src/Pages/UserDashboard/Transfer/transfer.scss
+++ b/frontend/src/Pages/UserDashboard/Transfer/transfer.scss
@@ -134,3 +134,21 @@
     }  
   }
 }
+
+@media(max-width: 600px) {
+  .transfer {
+    width: 100%;
+    gap: 1em;
+
+    .transfer-form {
+      
+      form {
+        padding: 1em;
+      }
+
+      input {
+        width: 250px;
+      }
+    }
+  }
+}
