--- a/frontend/src/layout/sidebar/sidebar.scss
+++ b/frontend/src/layout/sidebar/sidebar.scss
@@ -8,6 +8,7 @@
   position: fixed;
   height: 100vh;
   transition: 0.7s ease;
+  z-index: 100;
 
   .top {
     height: 70px;
